%% Pudel Database Schema — schema-as-code (managed in Java)

erDiagram
    %% Public Schema (Hibernate-managed JPA entities)
    USERS {
        bigint id PK
        string discord_id UK
        string username
        string discriminator
        string avatar_url
        boolean is_bot
        timestamp created_at
        timestamp updated_at
    }
    GUILD_SETTINGS {
        bigint id PK
        string guild_id UK
        string prefix
        int verbosity
        float cooldown
        string log_channel
        string bot_channel
        text biography
        text personality
        text preferences
        text dialogue_style
        string nickname
        string language
        string response_length
        string formality
        string emote_usage
        text quirks
        text topics_interest
        text topics_avoid
        text system_prompt_prefix
        text disabled_commands "CSV of disabled text commands"
        text disabled_plugins "CSV of disabled plugin names"
        boolean ai_enabled
        text ignored_channels
        boolean schema_created
        timestamp created_at
        timestamp updated_at
    }
    USER_GUILDS {
        bigint id PK
        bigint user_id FK
        string guild_id
        string nickname
        boolean is_owner
        boolean is_admin
        timestamp joined_at
    }
    SUBSCRIPTIONS {
        bigint id PK
        string subscriber_id UK
        string subscriber_type
        string tier
        timestamp started_at
        timestamp expires_at
        boolean is_active
        json features
    }
    PLUGIN_METADATA {
        bigint id PK
        string plugin_id UK
        string name
        string version
        string author
        text description
        boolean enabled
        string jar_path
        string main_class
        timestamp loaded_at
        timestamp updated_at
    }
    PLUGIN_KV_STORE {
        bigint id PK
        string plugin_id
        string namespace
        string key
        text value
        timestamp created_at
        timestamp updated_at
    }
    PLUGIN_DATABASE_REGISTRY {
        bigint id PK
        string plugin_id
        string table_name
        string schema_name
        timestamp created_at
    }
    ADMIN_WHITELIST {
        bigint id PK
        string discord_user_id UK
        string admin_role "OWNER ADMIN MODERATOR"
        text public_key_pem
        boolean has_public_key
        timestamp last_login
        timestamp created_at
    }
    MARKET_PLUGINS {
        bigint id PK
        string plugin_name UK
        string display_name
        text description
        string author
        string version
        string download_url
        string license_type
        boolean verified
        int downloads
        timestamp published_at
        timestamp updated_at
    }
    BOT_USERS {
        bigint id PK
        string discord_id UK
        string username
        timestamp first_seen
        timestamp last_seen
    }

    %% Per-guild schema (guild_{id}) — SchemaManagementService reconciled
    %% (dialogue_history, passive_context, forwarded_messages, user_preferences,
    %%  memory) + pgvector (memory_embeddings, dialogue_embeddings)
    DIALOGUE_HISTORY {
        bigint id PK
        bigint user_id
        bigint channel_id
        text user_message
        text bot_response
        string intent
        bigint respond_to
        text[] attachment_urls
        timestamp created_at
    }
    PASSIVE_CONTEXT {
        bigint id PK
        bigint message_id UK "UNIQUE -> ON CONFLICT upsert"
        bigint user_id
        bigint channel_id
        text content
        jsonb entities
        text[] attachment_urls
        jsonb forwarded_content
        timestamp created_at
    }
    FORWARDED_MESSAGES {
        bigint id PK
        bigint passive_context_id FK
        bigint message_id
        bigint author_id
        string author_name
        text content
        timestamp created_at
    }
    USER_PREFERENCES {
        bigint user_id PK
        string preferred_name
        jsonb custom_settings
        text notes
        timestamp created_at
        timestamp updated_at
    }
    MEMORY {
        bigint id PK
        string key UK
        text value
        string category
        bigint created_by
        timestamp created_at
        timestamp updated_at
    }
    MEMORY_EMBEDDINGS {
        bigint id PK
        bigint memory_id FK
        vector embedding "pgvector (optional)"
        timestamp created_at
    }
    DIALOGUE_EMBEDDINGS {
        bigint id PK
        bigint dialogue_id FK
        vector embedding "pgvector (optional)"
        timestamp created_at
    }

    %% Per-user schema (user_{id}) — SchemaManagementService reconciled
    PUDEL_SETTINGS {
        bigint id PK
        text biography
        text personality
        text preferences
        text dialogue_style
        timestamp created_at
        timestamp updated_at
    }
    USER_DIALOGUE_HISTORY {
        bigint id PK
        text user_message
        text bot_response
        string intent
        bigint respond_to
        text[] attachment_urls
        timestamp created_at
    }
    USER_MEMORY {
        bigint id PK
        string key UK
        text value
        string category
        timestamp created_at
        timestamp updated_at
    }

    %% Relationships
    USERS ||--o{ USER_GUILDS : has
    GUILD_SETTINGS ||--o{ DIALOGUE_HISTORY : "guild schema"
    GUILD_SETTINGS ||--o{ PASSIVE_CONTEXT : "guild schema"
    PLUGIN_METADATA ||--o{ PLUGIN_KV_STORE : stores
    PLUGIN_METADATA ||--o{ PLUGIN_DATABASE_REGISTRY : owns
    PASSIVE_CONTEXT ||--o{ FORWARDED_MESSAGES : "passive_context_id -> id ON DELETE CASCADE"
    MEMORY ||--o{ MEMORY_EMBEDDINGS : "memory_id -> id"
    DIALOGUE_HISTORY ||--o{ DIALOGUE_EMBEDDINGS : "dialogue_id -> id"
    USER_MEMORY ||--o{ MEMORY_EMBEDDINGS : "user schema"
    USER_DIALOGUE_HISTORY ||--o{ DIALOGUE_EMBEDDINGS : "user schema"
